--- a/web-for-crush/1/index.html
+++ b/web-for-crush/1/index.html
@@ -28,9 +28,9 @@
     </div>
     <div id="bg"></div>
     <div class="content">
-        <header>
-            <h2>Cậu yêu tớ có phải không nào ._.</h2>
-            <h4>Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v </h4>
+        <header class="d-flex flex-column justify-content-between ">
+            <h2 class="pt-3">Cậu yêu tớ có phải không nào ._.</h2>
+            <h4 class="p-1">Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">Yêu ơi là yêuuuuuu <333</button>
         <button id="no" type="button" class="btn btn-info btn-lg">Cậu mơ à :333</button>
